--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,6 +17,7 @@
                     <li><a href="home/#schedules">Psl Calendar</a></li>
                     <li><a href="home/#gallery">Picture Gallery</a></li>
                     <li><a routerLink="/legality" routerLinkActive="router-link-active" href='#top'>Legality</a></li>
+                    <li><a routerLink="/terms" routerLinkActive="router-link-active" href='#top'>Terms & Conditions</a></li>
                 </ul>
 
             </div>
