--- a/src/app/legality/legality.component.html
+++ b/src/app/legality/legality.component.html
@@ -30,54 +30,55 @@
             <div class="col-xs-12">
                 <div class="contentContainer">
                     <div class="custom-box">
-                        <h3 class="common-heading text-center">HOW TO PLAY</h3>
+                        <h3 class="common-heading text-center">Code of Conduct</h3>
                         <div class="content-box">
-                            <p style="font-size: 18px;"><em><strong>&lsquo;PSL is for all poker enthusiasts who dream of greatness. It’s a free entry league that aims to provide everyone who loves poker a shot of playing the biggest poker league in India. If you are someone who lives and breaths poker, here is your chance to prove your love for the game.
-                            &rsquo;</strong></em></p>
-                            <p style="text-align: justify; font-size: 18px;"><strong>There are four roads that lead to the Poker sports league arena.
-                            need to be met before applying.</strong></p>
-                            <p style="text-align: justify; font-size: 18px;"><strong>Online Qualifiers- </strong>Our online qualifiers are for poker enthusiasts who are unable to or can’t travel to our live qualifiers. There will be a total of 24 online qualifiers out of which a player is permitted
-                                to play a maximum of 6. X% of players will be awarded leaderboard points based on this formula *link*. Top players on the leaderboard will be awarded a spot in the Online qualifiers draft. This is the road for you if you
-                                are a poker amateur eager to prove your chops.
+                            <p style="font-size: 18px;"><em>This Code of Business Conduct and Ethics (the &quot;Code&quot;) sets forth legal and
+                                ethical standards of conduct for players and its member Teams. This Code is
+                                intended to deter wrongdoing and to promote the conduct of all League
+                                business in accordance with high standards of integrity and in compliance with
+                                all applicable laws and regulations. This Code applies to the League and all of
+                                its subsidiaries and other business entities.
+                            </em></p>
+                            <p style="text-align: justify; font-size: 18px;"><strong>Compliance with Laws, Rules and Regulations</strong></p>
+                            <p style="text-align: justify; font-size: 18px;">The League requires that all players and team owners comply with all laws, rules and regulations applicable to the League wherever it is active. You are expected to use good judgment and common sense in seeking to comply with
+                                all applicable laws, rules and regulations and to ask for advice when you are uncertain about them.</p>
+
+                            <p style="text-align: justify; font-size: 18px;"><strong>Conflicts of Interest</strong></p>
+                            <p style="text-align: justify; font-size: 18px;">Players and team owners must act in the best interests of the League and the game of poker. You must refrain from engaging in any activity or having a personal interest that presents a "conflict of interest". A conflict of
+                                interest occurs when your personal interest interferes, or appears to interfere, with the interests of the League.
                             </p>
-                            <p style="text-align: justify; font-size: 18px;"><strong>Live Qualifiers- </strong>Our Live qualifiers are for the newer players to land a spot in a team. They are held at premiere locations, providing a great battling experience where amateurs can duke it out for a spot
-                                in something bigger. Something in a “league” of it’s own. There will be a total of x live qualifiers out of which a player is permitted to play a maximum of 6. X% of players will be awarded leaderboard points based on this
-                                formula *link*. Top players on the leaderboard will be awarded a spot in the Online qualifiers draft. This is the road for you if you are a poker amateur eager to prove your chops while staring your opponent down!
+
+                            <p style="text-align: justify; font-size: 18px;"><strong>Compliance with team rules </strong>
+                            </p>
+                            <p style="text-align: justify; font-size: 18px;">Players of a specific team are expected to function in accordance with the basic rules set by the PSL and the team owner. Each player in a team is expected to work towards the common cause of making the team win. Each players
+                                every effort should be towards advertising his/her own PSL team and during active play, play poker to the best of his abilities.</p>
+
+                            <p style="text-align: justify; font-size: 18px;"><strong>Honest and Ethical Conduct and Fair gameplay here </strong> </p>
+                            <p style="text-align: justify; font-size: 18px;">Players should honestly, ethically and fairly deal with the League&#39;s officers, competitors and employees. Statements regarding the League&#39;s products and services must not be untrue, misleading, deceptive or fraudulent.
+                                You must not take unfair advantage of anyone through manipulation, concealment, abuse of privileged information, misrepresentation of material facts or any other unfair-dealing practice. Last but not the least, fair game
+                                play is expected from all players of PSL. All players are expected to use fair practices to win their respective tournaments in PSL. Any player found guilty of wrong going/unfair means to win/lose a poker tournament can
+                                face dire action from the PSL which can include but not be limited to getting banned that season.
                             </p>
 
-                            <p style="text-align: justify; font-size: 18px;"><strong>Pro- </strong> A pro player is a Marquee player who is supposed to give their team a tactical edge with high skill and finesse in execution. As such the following minimum requirements need to be met before applying.
 
+
+                            <p style="text-align: justify; font-size: 18px;"><strong>Gifts and Gratuities </strong>
                             </p>
-                            <p style="text-align: justify; font-size: 18px;">1) Two years of experience as a professional poker player.</p>
-                            <p style="text-align: justify; font-size: 18px;">2) Playing actively for a year (800 tournaments online, 40 live, 500 tournaments a year if doing both)</p>
+                            <p style="text-align: justify; font-size: 16px;">The use of League funds or assets for gifts, gratuities or other favors to PSL employees or other officials is prohibited, except to the extent such gifts are in compliance with applicable law, insignificant in amount and not
+                                given in consideration or expectation of any action by the recipient.</p>
+                            <p style="text-align: justify; font-size: 16px;">Common sense and moderation should prevail in business entertainment engaged in on behalf of the League. Employees, officers, agents and governors should provide, or accept, business entertainment to or from anyone doing business
+                                with the League only if the entertainment is infrequent, modest and intended to serve legitimate business goals.</p>
+                            <p style="text-align: justify; font-size: 16px;">Bribes and kickbacks are criminal acts, strictly prohibited by law.</p>
+                            <p style="text-align: justify; font-size: 16px;">You must not offer, give, solicit or receive any form of bribe or kickback anywhere in the world.</p>
 
-                            <p style="text-align: justify; font-size: 18px;"><strong>If, you meet the following criteria, please submit your application <a (click)="togglereg()" id="reg" style="color: blue; cursor: pointer;">here </a>
-                            <p style="text-align: justify; font-size: 18px;">Once selected, you will be automatically drafted in the Pro Draft, where you will be picked by a team after deliberation between the Owner and the Mentor.</p>
-                            </strong> </p>
+
+                            <p style="text-align: justify; font-size: 18px;"><strong>By giving the application, the player confirms that if he is selected, he is
+                            contractually bound to play the final event if selected by a team.</strong> </p>
 
 
-                            <p style="text-align: justify; font-size: 18px;"><strong>Mentors- </strong> Mentors are captains and in game leaders. They are there to give their team leadership and a strategic edge. They make the difficult calls, assign teammates roles and events and along with the owner
-                                take key decisions for their teams. It is a demanding role, therefore, you need to meet the following minimum requirements before applying.
 
-                            </p>
-                            <p style="text-align: justify; font-size: 16px;">1) Needs 5 years of experience as a professional poker player.</p>
-                            <p style="text-align: justify; font-size: 16px;">2) Needs to have previous leadership experience.</p>
-                            <p style="text-align: justify; font-size: 16px;">3) Needs to have played actively (500+ tournaments online) for a year.</p>
-                            <p style="text-align: justify; font-size: 16px;">4) Needs to have played at least 3000 tournaments in the last 5 years.</p>
-                            <p style="text-align: justify; font-size: 16px;">5) Needs to have at least 10 ITM’s in International fields.</p>
-                            <p style="text-align: justify; font-size: 18px;"><strong>If, you meet the following criteria, please submit your application <a (click)="togglereg()" id="reg" style="color: blue; cursor: pointer;">here </a> <p style="text-align: justify; font-size: 18px;"> You will be automatically drafted to the Mentor Draft,where the Team owners will pick their Mentors based on their personal preferences. If you are a veteran who wants to grow both the scene and the game, this is the road for you. Applications close on X, Selections to be made by Y.</p>
-                            </strong> </p>
                         </div>
-
-                        <p style="text-align: justify; font-size: 18px;"><strong>Team Discretion- </strong>
-                        </p>
-                        <p style="text-align: justify; font-size: 18px;"><strong>Wildcard- </strong>A team may choose upto 2 wildcard players in their team, They are chosen at the discretion of the team and owner. They can range from an International pro to a local celebrity. You cannot apply for a
-                            wildcard entry. But if you think you can add value to a team by being one, you can approach the owner directly. </p>
-
-
-
-                    </div>
-                    <!--
+                        <!--
                   <div class="row">
                       <div class="col-xs-12 playVideomn">
                           <p>&nbsp;</p>
@@ -90,16 +91,16 @@
                   </div>
                   -->
 
+                    </div>
                 </div>
             </div>
-        </div>
-        <div style="display:none" id="divreg" class="toggle-form">
-            <app-register></app-register>
-        </div>
-        <div style="display:none" id="divshow2">
-            <app-login></app-login>
-        </div>
+            <div style="display:none" id="divreg" class="toggle-form">
+                <app-register></app-register>
+            </div>
+            <div style="display:none" id="divshow2">
+                <app-login></app-login>
+            </div>
 
+        </div>
     </div>
-
 </section>
