--- a/src/app/league-structure/league-structure.component.html
+++ b/src/app/league-structure/league-structure.component.html
@@ -10,7 +10,7 @@
                     <p class="fadeInUp wow" data-wow-delay=".6s">India's First Poker League</p>
 
                     <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Poker Sports League</h1>
-                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Player profile</h1>
+                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">league-structure</h1>
                     <a href="javascript:void(0);" class="fadeInLeft wow btn btn-border btn-lg" data-wow-delay=".6s" (click)="togglereg()" id="reg">Register Now! </a>
                     <div *ngIf="!auth.isLoggedIn() && !user" class="nav-item">
                         <button (click)="toggle()" id="btToggle" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login </button>
