--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,6 +28,9 @@
                     <p class="fadeInUp wow" data-wow-delay=".6s">Poker Sports League</p>
                     <h1 class="wow bounceIn heading" data-wow-delay=".7s">#Poker Coming Soon</h1>
                     <a href="javascript:void(0);" class="fadeInUp wow btn btn-border btn-lg" data-wow-delay=".8s" (click)="togglereg()" id="reg">Register Now! </a>
+                     <div *ngIf="!auth.isLoggedIn() && !user" class="nav-item">
+                        <button (click)="toggle()" id="btToggle" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login </button>
+                    </div>
                 </div>
             </div>
             <div class="carousel-item">
@@ -36,7 +39,10 @@
                     <p class="fadeInUp wow" data-wow-delay=".6s">Poker Sports League</p>
                     <h1 class="wow fadeInUp heading" data-wow-delay=".6s">Register Now for Season 3</h1>
 
-                    <a href="javascript:void(0);" class="fadeInUp wow btn btn-common btn-lg" data-wow-delay=".8s" (click)="togglereg()" id="reg">Register Now! </a>
+                    <a href="javascript:void(0);" class="fadeInUp wow btn btn-border btn-lg" data-wow-delay=".8s" (click)="togglereg()" id="reg">Register Now! </a>
+                     <div *ngIf="!auth.isLoggedIn() && !user" class="nav-item">
+                        <button (click)="toggle()" id="btToggle" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -425,7 +431,7 @@
         </div>
         <div class="row justify-content-center mt-3">
             <div class="col-xs-12">
-                <a routerLink="/gallery" routerLinkActive="router-link-active" href='#top' class="btn btn-common">Browse All</a>
+                <a href="/gallery" routerLinkActive="router-link-active" class="btn btn-common">Browse All</a>
             </div>
         </div>
     </div>
