footer added in every page

--- a/src/app/about-vision/about-vision.component.html
+++ b/src/app/about-vision/about-vision.component.html
@@ -60,6 +60,7 @@
             <app-login></app-login>
         </div>
     </div>
+    <app-footer></app-footer>
 </section>
 
 <!-- Team Section End -->
