--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -115,5 +115,6 @@
     <div style="display:none" id="divshow2">
         <app-login></app-login>
     </div>
+    <app-footer></app-footer>
 </section>
 <!-- Gallary Section End -->
