footer added in every page

--- a/src/app/previous-seasons/previous-seasons.component.html
+++ b/src/app/previous-seasons/previous-seasons.component.html
@@ -88,5 +88,6 @@
     <div style="display:none" id="divshow2">
         <app-login></app-login>
     </div>
+    <app-footer></app-footer>
 </section>
 <!-- Blog Section End -->
