--- a/src/app/team-members/team-members.component.html
+++ b/src/app/team-members/team-members.component.html
@@ -183,5 +183,6 @@
     <div style="display:none" id="divshow2">
         <app-login></app-login>
     </div>
+    <app-footer></app-footer>
 </section>
 <!-- Team Section End -->
