--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,6 @@
-<!-- Header Area wrapper Starts -->
+<!-- Main Carousel Section Start -->
 <header id="header-wrap">
     <app-navigation></app-navigation>
-    <!-- Main Carousel Section Start -->
     <div id="main-slide" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#main-slide" data-slide-to="0" class="active"></li>
@@ -12,11 +11,9 @@
             <div class="carousel-item active">
                 <img class="d-block w-100" src="assets/img/slider/slide1.jpg" alt="First slide">
                 <div class="carousel-caption d-md-block">
-                    <p class="fadeInUp wow" data-wow-delay=".6s">India's First Poker League</p>
-                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Poker Sports League</h1>
-
-                    <a href="javascript:void(0);" class="fadeInLeft wow btn btn-border btn-lg" data-wow-delay=".6s" (click)="togglereg()" id="reg">Register Now! </a>
-
+                    <p class="fadeInUp wow" data-wow-delay=".6s">Poker Sports League</p>
+                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">India's first Poker League</h1>
+                    <a href="javascript:void(0);" class="fadeInUp wow btn btn-border btn-lg" data-wow-delay=".8s" (click)="togglereg()" id="reg">Register Now! </a>
                     <div *ngIf="!auth.isLoggedIn() && !user" class="nav-item">
                         <button (click)="toggle()" id="btToggle" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login </button>
                     </div>
@@ -26,9 +23,9 @@
                 <img class="d-block w-100" src="assets/img/slider/slide2.jpg" alt="Second slide">
                 <div class="carousel-caption d-md-block">
                     <p class="fadeInUp wow" data-wow-delay=".6s">Poker Sports League</p>
-                    <h1 class="wow bounceIn heading" data-wow-delay=".7s">#Poker Coming Soon</h1>
+                    <h1 class="wow bounceIn heading" data-wow-delay=".7s">11 Teams Around India Compete for the Ultimate Prize</h1>
                     <a href="javascript:void(0);" class="fadeInUp wow btn btn-border btn-lg" data-wow-delay=".8s" (click)="togglereg()" id="reg">Register Now! </a>
-                     <div *ngIf="!auth.isLoggedIn() && !user" class="nav-item">
+                    <div *ngIf="!auth.isLoggedIn() && !user" class="nav-item">
                         <button (click)="toggle()" id="btToggle" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login </button>
                     </div>
                 </div>
@@ -37,10 +34,9 @@
                 <img class="d-block w-100" src="assets/img/slider/slide3.jpg" alt="Third slide">
                 <div class="carousel-caption d-md-block">
                     <p class="fadeInUp wow" data-wow-delay=".6s">Poker Sports League</p>
-                    <h1 class="wow fadeInUp heading" data-wow-delay=".6s">Register Now for Season 3</h1>
-
+                    <h1 class="wow fadeInUp heading" data-wow-delay=".6s">Register Now for Season3!</h1>
                     <a href="javascript:void(0);" class="fadeInUp wow btn btn-border btn-lg" data-wow-delay=".8s" (click)="togglereg()" id="reg">Register Now! </a>
-                     <div *ngIf="!auth.isLoggedIn() && !user" class="nav-item">
+                    <div *ngIf="!auth.isLoggedIn() && !user" class="nav-item">
                         <button (click)="toggle()" id="btToggle" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login </button>
                     </div>
                 </div>
@@ -55,22 +51,26 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-
-    <!-- reg/login popup div start-->
-    <div style="display:none" id="divshow2">
-        <app-login></app-login>
-    </div>
-    <div style="display:none" id="divreg">
-        <app-register></app-register>
-    </div>
-    <div style="display:none" id="divfp">
-        <app-forgot-password></app-forgot-password>
-    </div>
-    <!--reg/login popup div end-->
-
-    <!-- Main Carousel Section End -->
-
 </header>
+<!-- Main Carousel Section End -->
+
+
+<!-- Header Area wrapper End -->
+
+<!-- reg/login popup div start-->
+<div style="display:none" id="divshow2">
+    <app-login></app-login>
+</div>
+<div style="display:none" id="divreg">
+    <app-register></app-register>
+</div>
+<div style="display:none" id="divfp">
+    <app-forgot-password></app-forgot-password>
+</div>
+<!--reg/login popup div end-->
+
+<!-- Main Carousel Section End -->
+
 <!-- Header Area wrapper End -->
 
 <!--Popup banner div start-->
