--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,134 +1,180 @@
-<!-- Navbar Start -->
+<!-- Header Area wrapper Starts -->
 
-<nav class="navbar navbar-expand-lg fixed-top scrolling-navbar">
-
-    <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
+    <!-- Navbar Start -->
+    <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         <span class="icon-menu"></span>
         <span class="icon-menu"></span>
         <span class="icon-menu"></span>
       </button>
-            <a href="index.html" class="navbar-brand"><img src="assets/img/logo.png" alt=""></a>
-        </div>
-        <div class="collapse navbar-collapse" id="main-navbar">
-
-
-            <ul class="navbar-nav mr-auto w-100 justify-content-end">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">
+                <a href="index.html" class="navbar-brand"><img src="" alt=""></a>
+            </div>
+            <div class="collapse navbar-collapse" id="main-navbar">
+                <ul class="navbar-nav mr-auto w-100 justify-content-end">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">
             Home
           </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="home/#about">
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="home/#about">
             About
           </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="home/#schedules">
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="home/#schedules">
             PSL Calendar
           </a>
-                </li>
+                    </li>
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown">
                     Teams
      </a>
 
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" routerLink="/psl-teams" routerLinkActive="router-link-active" href='#top'>PSL Teams</a></li>
-                        <li><a class="dropdown-item" routerLink="/player-profile" routerLinkActive="router-link-active" href='#top'>Player Profile</a></li>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" routerLink="/psl-teams" routerLinkActive="router-link-active" href='#top'>PSL Teams</a></li>
+                            <li><a class="dropdown-item" routerLink="/player-profile" routerLinkActive="router-link-active" href='#top'>Player Profile</a></li>
 
-                    </ul>
-                </li>
+                        </ul>
+                    </li>
 
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown">
   NEWS/MEDIA
        </a>
 
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" routerLink="/news" routerLinkActive="router-link-active" href='#top'>NEWS</a></li>
-                        <li><a class="dropdown-item" routerLink="/videos" routerLinkActive="router-link-active" href='#top'>VIDEOS</a></li>
-                        <li><a class="dropdown-item" href="home/#gallery">EVENT GALLERY</a></li>
-                        <li><a class="dropdown-item" routerLink="/previous-seasons" routerLinkActive="router-link-active" href='#top'>PREVIOUS SEASONS</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown">
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" routerLink="/news" routerLinkActive="router-link-active" href='#top'>NEWS</a></li>
+                            <li><a class="dropdown-item" routerLink="/videos" routerLinkActive="router-link-active" href='#top'>VIDEOS</a></li>
+                            <li><a class="dropdown-item" href="home/#gallery">EVENT GALLERY</a></li>
+                            <li><a class="dropdown-item" routerLink="/previous-seasons" routerLinkActive="router-link-active" href='#top'>PREVIOUS SEASONS</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown">
                         HOW TO APPLY
                     </a>
 
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" routerLink="/league-structure" routerLinkActive="router-link-active" href='#top'>LEAGUE STRUCTURE</a></li>
-                        <li><a class="dropdown-item" routerLink="/how-to-play" routerLinkActive="router-link-active" href='#top'>HOW TO PLAY</a></li>
-                        <li><a class="dropdown-item" routerLink="/qualifier" routerLinkActive="router-link-active" href='#top'>BE A QUALIFIER</a></li>
-                        <li><a class="dropdown-item" routerLink="/pro" routerLinkActive="router-link-active" href='#top'>BE A PRO</a></li>
-                        <li><a class="dropdown-item" routerLink="/mentor" routerLinkActive="router-link-active" href='#top'>BE A MENTOR</a></li>
-                    </ul>
-                </li>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" routerLink="/league-structure" routerLinkActive="router-link-active" href='#top'>LEAGUE STRUCTURE</a></li>
+                            <li><a class="dropdown-item" routerLink="/how-to-play" routerLinkActive="router-link-active" href='#top'>HOW TO PLAY</a></li>
+                            <li><a class="dropdown-item" routerLink="/qualifier" routerLinkActive="router-link-active" href='#top'>BE A QUALIFIER</a></li>
+                            <li><a class="dropdown-item" routerLink="/pro" routerLinkActive="router-link-active" href='#top'>BE A PRO</a></li>
+                            <li><a class="dropdown-item" routerLink="/mentor" routerLinkActive="router-link-active" href='#top'>BE A MENTOR</a></li>
+                        </ul>
+                    </li>
 
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown">
                         MORE
                     </a>
 
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="home/#sponsors">PARTNERS</a></li>
-                        <li><a class="dropdown-item" href="home/#faq">FAQ's</a></li>
-                        <li><a class="dropdown-item" href="home/#contact">CONTACT US</a></li>
-                    </ul>
-                </li>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="home/#sponsors">PARTNERS</a></li>
+                            <li><a class="dropdown-item" href="home/#faq">FAQ's</a></li>
+                            <li><a class="dropdown-item" href="home/#contact">CONTACT US</a></li>
+                        </ul>
+                    </li>
 
 
-                <li *ngIf="auth.isLoggedIn()" class="nav-item">
-                    <a href="javascript:void(0);" (click)="auth.logout()" class="nav-link">Logout &nbsp;<i class="fa fa-sign-out" aria-hidden="true"></i> </a>
-                </li>
-                <li *ngIf="user" class="nav-item">
-                    <a href="javascript:void(0);" (click)="signOut()" class="nav-link">Logout  &nbsp;<i class="fa fa-sign-out" aria-hidden="true"></i> </a>
-                </li>
+                    <li *ngIf="auth.isLoggedIn()" class="nav-item">
+                        <a href="javascript:void(0);" (click)="auth.logout()" class="nav-link">Logout &nbsp;<i class="fa fa-sign-out" aria-hidden="true"></i> </a>
+                    </li>
+                    <li *ngIf="user" class="nav-item">
+                        <a href="javascript:void(0);" (click)="signOut()" class="nav-link">Logout  &nbsp;<i class="fa fa-sign-out" aria-hidden="true"></i> </a>
+                    </li>
 
-
-            </ul>
+                </ul>
+            </div>
         </div>
-    </div>
 
-    <!-- Mobile Menu Start -->
-    <ul class="mobile-menu">
-        <li>
-            <a class="page-scrool" href="#home">Home</a>
-        </li>
-        <li>
-            <a class="page-scrool" href="#about">About</a>
-        </li>
-        <li>
-            <a class="page-scroll" href="#schedules">PSL Calander</a>
-        </li>
-        <li>
-            <a class="page-scroll" href="#team">Teams</a>
-        </li>
 
-        <li>
-            <a class="page-scroll" href="#contact">Contact</a>
-        </li>
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown">
-More
+        <!-- Mobile Menu Start -->
+        <ul class="mobile-menu">
+            <li class="nav-item active">
+                <a class="nav-link" href="index.html">
+Home
+</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="home/#about">
+About
+</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="home/#schedules">
+PSL Calendar
+</a>
+            </li>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown">
+        Teams
 </a>
 
-            <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#sponsors">Our PARTNERS</a></li>
-                <li><a class="dropdown-item" href="#faq">FAQ's</a></li>
-                <li><a class="dropdown-item" href="#gallery">GALLERY</a></li>
-            </ul>
-        </li>
-    </ul>
-    <!-- Mobile Menu End -->
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" routerLink="/psl-teams" routerLinkActive="router-link-active" href='#top'>PSL Teams</a></li>
+                    <li><a class="dropdown-item" routerLink="/player-profile" routerLinkActive="router-link-active" href='#top'>Player Profile</a></li>
 
-</nav>
-<!-- Navbar End -->
+                </ul>
+            </li>
+
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown">
+NEWS/MEDIA
+</a>
+
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" routerLink="/news" routerLinkActive="router-link-active" href='#top'>NEWS</a></li>
+                    <li><a class="dropdown-item" routerLink="/videos" routerLinkActive="router-link-active" href='#top'>VIDEOS</a></li>
+                    <li><a class="dropdown-item" href="home/#gallery">EVENT GALLERY</a></li>
+                    <li><a class="dropdown-item" routerLink="/previous-seasons" routerLinkActive="router-link-active" href='#top'>PREVIOUS SEASONS</a></li>
+                </ul>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown">
+            HOW TO APPLY
+        </a>
+
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" routerLink="/league-structure" routerLinkActive="router-link-active" href='#top'>LEAGUE STRUCTURE</a></li>
+                    <li><a class="dropdown-item" routerLink="/how-to-play" routerLinkActive="router-link-active" href='#top'>HOW TO PLAY</a></li>
+                    <li><a class="dropdown-item" routerLink="/qualifier" routerLinkActive="router-link-active" href='#top'>BE A QUALIFIER</a></li>
+                    <li><a class="dropdown-item" routerLink="/pro" routerLinkActive="router-link-active" href='#top'>BE A PRO</a></li>
+                    <li><a class="dropdown-item" routerLink="/mentor" routerLinkActive="router-link-active" href='#top'>BE A MENTOR</a></li>
+                </ul>
+            </li>
+
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown">
+            MORE
+        </a>
+
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="home/#sponsors">PARTNERS</a></li>
+                    <li><a class="dropdown-item" href="home/#faq">FAQ's</a></li>
+                    <li><a class="dropdown-item" href="home/#contact">CONTACT US</a></li>
+                </ul>
+            </li>
+
+
+            <li *ngIf="auth.isLoggedIn()" class="nav-item">
+                <a href="javascript:void(0);" (click)="auth.logout()" class="nav-link">Logout &nbsp;<i class="fa fa-sign-out" aria-hidden="true"></i> </a>
+            </li>
+            <li *ngIf="user" class="nav-item">
+                <a href="javascript:void(0);" (click)="signOut()" class="nav-link">Logout  &nbsp;<i class="fa fa-sign-out" aria-hidden="true"></i> </a>
+            </li>
+        </ul>
+        <!-- Mobile Menu End -->
+
+    </nav>
+    <!-- Navbar End -->
