--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -26,7 +26,7 @@
                 <ul class="footer-social">
                     <li><a class="facebook" href="#"><i class="lni-facebook-filled"></i></a></li>
                     <li><a class="twitter" href="#"><i class="lni-twitter-filled"></i></a></li>
-                    <li><a class="linkedin" href="#"><i class="lni-linkedin-filled"></i></a></li>
+                    <li><a class="linkedin" href="#"><i class="lni-instagram-filled"></i></a></li>
                     <li><a class="google-plus" href="#"><i class="lni-google-plus"></i></a></li>
                 </ul>
 
@@ -37,16 +37,16 @@
                 <h3>Address</h3>
                 <ul class="image-list">
 
-                    <div class="contact-info">
-                        <div class="mb-5">
-                            <h4 class="mb-3"></h4>
-                            <p><span class="fa fa-map mr-2"></span>606 - 607, Gera Grand Imperium, Patto</p>
-                            <p>Panjim,Goa.</p>
-                            <p><span class="fa fa-phone mr-2"></span>+91 8322987777 </p>
-                            <p><span class="fa fa-envelope mr-2"></span> <a href="info@pokersportsleague.com"> info@pokersportsleague.com</a> </p>
-                        </div>
 
+                    <div class="mb-5">
+                        <h4 class="mb-3"></h4>
+                        <p><span class="fa fa-map mr-2"></span>606 - 607, Gera Grand Imperium, Patto</p>
+                        <p>Panjim,Goa.</p>
+                        <p><span class="fa fa-phone mr-2"></span>+91 8322987777 </p>
+                        <p><span class="fa fa-envelope mr-2"></span> <a href="info@pokersportsleague.com"> info@pokersportsleague.com</a> </p>
                     </div>
+
+
                 </ul>
                 <!-- /.widget -->
                 <div class="widget">
