--- a/src/app/how-to-play/how-to-play.component.html
+++ b/src/app/how-to-play/how-to-play.component.html
@@ -11,7 +11,7 @@
                     <p class="fadeInUp wow" data-wow-delay=".6s">India's First Poker League</p>
 
                     <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Poker Sports League</h1>
-                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Our Mission</h1>
+                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">HOW TO APPLY</h1>
                     <a href="javascript:void(0);" class="fadeInLeft wow btn btn-border btn-lg" data-wow-delay=".6s" (click)="togglereg()" id="reg">Register Now! </a>
                     <div *ngIf="!auth.isLoggedIn() && !user" class="nav-item">
                         <button (click)="toggle()" id="btToggle" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login </button>
@@ -30,49 +30,79 @@
             <div class="col-xs-12">
                 <div class="contentContainer">
                     <div class="custom-box">
-                        <h3 class="common-heading text-center">HOW TO PLAY</h3>
+                        <h3 class="common-heading text-center">HOW TO APPLY</h3>
                         <div class="content-box">
                             <p style="font-size: 18px;"><em><strong>&lsquo;PSL is for all poker enthusiasts who dream of greatness. It’s a free entry league that aims to provide everyone who loves poker a shot of playing the biggest poker league in India. If you are someone who lives and breaths poker, here is your chance to prove your love for the game.
                             &rsquo;</strong></em></p>
-                            <p style="text-align: justify; font-size: 18px;"><strong>There are four roads that lead to the Poker sports league arena.
+                            <p style="text-align: justify; font-size: 18px; padding:40px"><strong>There are four roads that lead to the Poker sports league arena.
                             need to be met before applying.</strong></p>
-                            <p style="text-align: justify; font-size: 18px;"><strong>Online Qualifiers- </strong>Our online qualifiers are for poker enthusiasts who are unable to or can’t travel to our live qualifiers. There will be a total of 24 online qualifiers out of which a player is permitted
-                                to play a maximum of 6. X% of players will be awarded leaderboard points based on this formula *link*. Top players on the leaderboard will be awarded a spot in the Online qualifiers draft. This is the road for you if you
-                                are a poker amateur eager to prove your chops.
-                            </p>
-                            <p style="text-align: justify; font-size: 18px;"><strong>Live Qualifiers- </strong>Our Live qualifiers are for the newer players to land a spot in a team. They are held at premiere locations, providing a great battling experience where amateurs can duke it out for a spot
-                                in something bigger. Something in a “league” of it’s own. There will be a total of x live qualifiers out of which a player is permitted to play a maximum of 6. X% of players will be awarded leaderboard points based on this
-                                formula *link*. Top players on the leaderboard will be awarded a spot in the Online qualifiers draft. This is the road for you if you are a poker amateur eager to prove your chops while staring your opponent down!
-                            </p>
 
-                            <p style="text-align: justify; font-size: 18px;"><strong>Pro- </strong> A pro player is a Marquee player who is supposed to give their team a tactical edge with high skill and finesse in execution. As such the following minimum requirements need to be met before applying.
+                        </div>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-12">
 
-                            </p>
-                            <p style="text-align: justify; font-size: 18px;">1) Two years of experience as a professional poker player.</p>
-                            <p style="text-align: justify; font-size: 18px;">2) Playing actively for a year (800 tournaments online, 40 live, 500 tournaments a year if doing both)</p>
-
-                            <p style="text-align: justify; font-size: 18px;"><strong>If, you meet the following criteria, please submit your application <a (click)="togglereg()" id="reg" style="color: blue; cursor: pointer;">here </a>
-                            <p style="text-align: justify; font-size: 18px;">Once selected, you will be automatically drafted in the Pro Draft, where you will be picked by a team after deliberation between the Owner and the Mentor.</p>
-                            </strong> </p>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-xs-12">
+                                    <div class="blog-item">
+                                        <div class="blog-image">
+                                            <a>
+                                                <img class="img-fluid" routerLink="/qualifier" routerLinkActive="router-link-active" href='#top' src="assets/img/blog/img-1.jpg" alt="">
+                                            </a>
+                                        </div>
+                                        <div class="descr">
 
 
-                            <p style="text-align: justify; font-size: 18px;"><strong>Mentors- </strong> Mentors are captains and in game leaders. They are there to give their team leadership and a strategic edge. They make the difficult calls, assign teammates roles and events and along with the owner
-                                take key decisions for their teams. It is a demanding role, therefore, you need to meet the following minimum requirements before applying.
+                                            <div class="col-xs-12 text-center">
+                                                <a href="/qualifier" routerLinkActive="router-link-active" class="btn btn-common" style="color: #fff">BE A QUALIFIER</a>
+                                            </div>
 
-                            </p>
-                            <p style="text-align: justify; font-size: 16px;">1) Needs 5 years of experience as a professional poker player.</p>
-                            <p style="text-align: justify; font-size: 16px;">2) Needs to have previous leadership experience.</p>
-                            <p style="text-align: justify; font-size: 16px;">3) Needs to have played actively (500+ tournaments online) for a year.</p>
-                            <p style="text-align: justify; font-size: 16px;">4) Needs to have played at least 3000 tournaments in the last 5 years.</p>
-                            <p style="text-align: justify; font-size: 16px;">5) Needs to have at least 10 ITM’s in International fields.</p>
-                            <p style="text-align: justify; font-size: 18px;"><strong>If, you meet the following criteria, please submit your application <a (click)="togglereg()" id="reg" style="color: blue; cursor: pointer;">here </a> <p style="text-align: justify; font-size: 18px;"> You will be automatically drafted to the Mentor Draft,where the Team owners will pick their Mentors based on their personal preferences. If you are a veteran who wants to grow both the scene and the game, this is the road for you. Applications close on X, Selections to be made by Y.</p>
-                            </strong> </p>
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-xs-12">
+                                    <div class="blog-item">
+                                        <div class="blog-image">
+                                            <a>
+                                                <img class="img-fluid" routerLink="/pro" routerLinkActive="router-link-active" href='#top' src="assets/img/blog/img-1.jpg" alt="">
+                                            </a>
+                                        </div>
+                                        <div class="descr">
+
+
+                                            <div class="col-xs-12 text-center">
+                                                <a href="/pro" routerLinkActive="router-link-active" class="btn btn-common" style="color: #fff">BE A PRO</a>
+                                            </div>
+
+
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-4 col-md-6 col-xs-12">
+                                    <div class="blog-item">
+                                        <div class="blog-image">
+                                            <a>
+                                                <img class="img-fluid" routerLink="/mentor" routerLinkActive="router-link-active" href='#top' src="assets/img/blog/img-1.jpg" alt="">
+                                            </a>
+                                        </div>
+                                        <div class="descr">
+
+
+                                            <div class="col-xs-12 text-center">
+                                                <a href="/mentor" routerLinkActive="router-link-active" class="btn btn-common" style="color: #fff">BE A MENTOR</a>
+                                            </div>
+
+
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+
                         </div>
 
-                        <p style="text-align: justify; font-size: 18px;"><strong>Team Discretion- </strong>
-                        </p>
-                        <p style="text-align: justify; font-size: 18px;"><strong>Wildcard- </strong>A team may choose upto 2 wildcard players in their team, They are chosen at the discretion of the team and owner. They can range from an International pro to a local celebrity. You cannot apply for a
-                            wildcard entry. But if you think you can add value to a team by being one, you can approach the owner directly. </p>
 
 
 
