--- a/src/styles.css
+++ b/src/styles.css
@@ -652,7 +652,7 @@ a.back-to-top:focus {
 }
 
 .top-nav-collapse .navbar-nav .nav-link {
-    color: white !important;
+    color: #fff !important;
 }
 
 .top-nav-collapse .navbar-nav .nav-link:hover {
@@ -689,7 +689,7 @@ a.back-to-top:focus {
     margin-left: -10px;
     width: 15px;
     height: 2px;
-    background: white;
+    background: #fff;
     -webkit-transform: scale3d(0, 1, 1);
     -moz-transform: scale3d(0, 1, 1);
     transform: scale3d(0, 1, 1);
@@ -719,7 +719,7 @@ a.back-to-top:focus {
 
 .navbar-expand-lg .navbar-nav .nav-link:focus,
 .navbar-expand-lg .navbar-nav .nav-link:hover {
-    color: white !important;
+    color: #fff !important;
 }
 
 .navbar {
@@ -727,7 +727,7 @@ a.back-to-top:focus {
 }
 
 .navbar li.active a.nav-link {
-    color: white !important;
+    color: #fff !important;
 }
 
 .dropdown-toggle::after {
@@ -1548,7 +1548,7 @@ a.back-to-top:focus {
     top: -18px;
     left: 20px;
     padding: 4px 27px;
-    background-color: white;
+    background-color: #fff;
     color: #16253c;
     border-radius: 4px;
     display: block;
@@ -1573,6 +1573,7 @@ a.back-to-top:focus {
     text-align: center;
     font-size: 25px;
     color: #212121;
+    border-radius: 12px;
     -webkit-transition: all 300ms ease-in-out;
     -moz-transition: all 300ms ease-in-out;
     transition: all 300ms ease-in-out;
@@ -1735,7 +1736,7 @@ a.back-to-top:focus {
     padding: 15px;
     text-decoration: none;
     font-size: 20px;
-    color: white;
+    color: #fff;
     border-radius: 15px;
 }
 
@@ -1898,7 +1899,7 @@ a.back-to-top:focus {
     background: #018e3f;
     border: 2px solid #42c539;
     border-radius: 20px;
-    color: white;
+    color: #fff;
     cursor: pointer;
     /* display: inline-block; */
     font-weight: 700;
@@ -1919,7 +1920,7 @@ a.back-to-top:focus {
     /*background-color: #4CAF50;
     Green */
     border: none;
-    color: white;
+    color: #fff;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -2755,21 +2756,6 @@ a.back-to-top:focus {
     font-size: 20px;
 }
 
-@media (min-width: 768px) and (max-width: 991px) .testimonial-title {
-    color: white !important;
-    .carousel {
-        background: #16253c;
-    }
-    .carousel-item {
-        text-align: center;
-        min-height: 280px;
-        /* Prevent carousel from being distorted if for some reason image doesn't load */
-    }
-    .bs-example {
-        margin: 20px;
-    }
-}
-
 
 /*--Responisve styles---*/
 
@@ -3075,4 +3061,5 @@ a.back-to-top:focus {
 .btn {
     padding: 5px 7px;
     font-size: 13px;
+    border-radius: 5px;
 }
