--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -41,7 +41,7 @@ width:100% !important">
                 <div class="or-seperator"><i>or</i></div>
                 <div class="row">
                     <div  class="col-lg-6 col-md-6 col-xs-12 col-sm-12 " style="padding-right: 44px;padding-left: 44px;">
-                        <a style=" text-transform: none; width: 230px; " href="#" class="btn btn-primary btn-block"><i class="fa fa-facebook"></i><span style="font-size: 17px;"> Sign in with <b>Facebook</b></span> </a>
+                        <a style=" text-transform: none; width: 230px; "href="javascript:void(0);" (click)="signInWithFB()" class="btn btn-primary btn-block"><i class="fa fa-facebook"></i><span style="font-size: 17px;"> Sign in with <b>Facebook</b></span> </a>
                     </div>
                     <div  class="col-lg-6 col-md-6 col-xs-12 col-sm-12 " style="padding-right: 44px;
                     padding-left: 44px;">
