--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,11 +1,13 @@
 <!-- Header Area wrapper Starts -->
 
 <!-- Navbar Start -->
+<nav class="top-nav">hello</nav>
 <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar">
+    
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" style= "color: #fff;" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         <span class="icon-menu"></span>
         <span class="icon-menu"></span>
