--- a/src/styles.css
+++ b/src/styles.css
@@ -633,7 +633,7 @@ a.back-to-top:focus {
 }
 
 .top-nav-collapse {
-    background: #fff;
+   
     z-index: 999999;
     top: 0px !important;
     min-height: 58px;
@@ -719,15 +719,21 @@ a.back-to-top:focus {
 
 .navbar-expand-lg .navbar-nav .nav-link:focus,
 .navbar-expand-lg .navbar-nav .nav-link:hover {
-    color: #fff !important;
+    color: #daa520 !important;
 }
-
+.top-nav{
+    margin:0px;
+    padding: 35px;
+    background: #232529;
+ 
+}
 .navbar {
     padding: 0;
+    background: #16253c;
 }
 
 .navbar li.active a.nav-link {
-    color: #fff !important;
+    color: #daa520 !important;
 }
 
 .dropdown-toggle::after {
